--- a/public/index.html
+++ b/public/index.html
@@ -11,8 +11,14 @@
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
         <style>
             * {
-                margin: 0;
                 font-family: 'Roboto', sans-serif;
+            }
+            html,
+            body,
+            #root,
+            .App {
+                margin: 0;
+                height: 100vh;
             }
             ::-webkit-scrollbar {
                 width: 6px;
