--- a/public/index.html
+++ b/public/index.html
@@ -15,14 +15,13 @@
                 font-size: 0.9rem;
             }
             html {
-                height: 100vh;
+                min-height: 100vh;
             }
             body,
             #root,
             .App {
                 margin: 0;
-                overflow: auto;
-                height: 100%;
+                min-height: 100vh;
                 width: 100%;
             }
             ::-webkit-scrollbar {
