--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,8 @@
                 width: 100%;
             }
             ::-webkit-scrollbar {
-                width: 6px;
+                height: 4px;
+                width: 4px;
                 background-color: #f5f5f5;
             }
             ::-webkit-scrollbar-track {
