--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,9 @@
                 min-height: 100vh;
                 width: 100%;
             }
+            #root-overlays {
+                position: sticky;
+            }
             ::-webkit-scrollbar {
                 height: 4px;
                 width: 4px;
